compare/VSAParser.py
# Generated from VSA.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class VSAParser ( Parser ):

    grammarFileName = "VSA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'f'", "','", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'+'", "'-'", "'*'", "'/'", 
                     "<INVALID>", "<INVALID>", "'|'", "'&'", "'^'", "'#'", 
                     "'%'", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VARIABLE", "SCIENTIFIC_NUMBER", "LPAREN", 
                      "RPAREN", "PLUS", "MINUS", "TIMES", "DIV", "LS", "RS", 
                      "OR", "AND", "XOR", "CON", "REM", "NEG", "WS" ]

    RULE_expr_ = 0
    RULE_function = 1
    RULE_expression = 2
    RULE_atom = 3
    RULE_scientific = 4
    RULE_variable = 5
    RULE_binop = 6

    ruleNames =  [ "expr_", "function", "expression", "atom", "scientific", 
                   "variable", "binop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    VARIABLE=5
    SCIENTIFIC_NUMBER=6
    LPAREN=7
    RPAREN=8
    PLUS=9
    MINUS=10
    TIMES=11
    DIV=12
    LS=13
    RS=14
    OR=15
    AND=16
    XOR=17
    CON=18
    REM=19
    NEG=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Expr_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(VSAParser.ExpressionContext,0)


        def function(self):
            return self.getTypedRuleContext(VSAParser.FunctionContext,0)


        def LPAREN(self):
            return self.getToken(VSAParser.LPAREN, 0)

        def expr_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VSAParser.Expr_Context)
            else:
                return self.getTypedRuleContext(VSAParser.Expr_Context,i)


        def RPAREN(self):
            return self.getToken(VSAParser.RPAREN, 0)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(VSAParser.MINUS)
            else:
                return self.getToken(VSAParser.MINUS, i)

        def NEG(self, i:int=None):
            if i is None:
                return self.getTokens(VSAParser.NEG)
            else:
                return self.getToken(VSAParser.NEG, i)

        def binop(self):
            return self.getTypedRuleContext(VSAParser.BinopContext,0)


        def getRuleIndex(self):
            return VSAParser.RULE_expr_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_" ):
                listener.enterExpr_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_" ):
                listener.exitExpr_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_" ):
                return visitor.visitExpr_(self)
            else:
                return visitor.visitChildren(self)



    def expr_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = VSAParser.Expr_Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr_, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 15
                self.expression(0)
                pass

            elif la_ == 2:
                self.state = 16
                self.function()
                pass

            elif la_ == 3:
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.MINUS:
                    self.state = 17
                    self.match(VSAParser.MINUS)
                    self.state = 22
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 23
                self.match(VSAParser.LPAREN)
                self.state = 24
                self.expr_(0)
                self.state = 25
                self.match(VSAParser.RPAREN)
                pass

            elif la_ == 4:
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.MINUS:
                    self.state = 27
                    self.match(VSAParser.MINUS)
                    self.state = 32
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 33
                self.match(VSAParser.T__0)
                self.state = 34
                self.expr_(0)
                self.state = 35
                self.match(VSAParser.T__1)
                pass

            elif la_ == 5:
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.NEG:
                    self.state = 37
                    self.match(VSAParser.NEG)
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 43
                self.match(VSAParser.T__0)
                self.state = 44
                self.expr_(0)
                self.state = 45
                self.match(VSAParser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = VSAParser.Expr_Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr_)
                    self.state = 49
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 50
                    self.binop()
                    self.state = 51
                    self.expr_(5) 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VSAParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(VSAParser.ExpressionContext,i)


        def getRuleIndex(self):
            return VSAParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = VSAParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(VSAParser.T__2)
                self.state = 59
                self.match(VSAParser.T__0)
                self.state = 60
                self.expression(0)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.T__3:
                    self.state = 61
                    self.match(VSAParser.T__3)
                    self.state = 62
                    self.expression(0)
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.match(VSAParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(VSAParser.T__2)
                self.state = 71
                self.match(VSAParser.T__0)
                self.state = 72
                self.match(VSAParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(VSAParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VSAParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(VSAParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(VSAParser.RPAREN, 0)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(VSAParser.MINUS)
            else:
                return self.getToken(VSAParser.MINUS, i)

        def atom(self):
            return self.getTypedRuleContext(VSAParser.AtomContext,0)


        def NEG(self, i:int=None):
            if i is None:
                return self.getTokens(VSAParser.NEG)
            else:
                return self.getToken(VSAParser.NEG, i)

        def binop(self):
            return self.getTypedRuleContext(VSAParser.BinopContext,0)


        def getRuleIndex(self):
            return VSAParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = VSAParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.MINUS:
                    self.state = 76
                    self.match(VSAParser.MINUS)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(VSAParser.LPAREN)
                self.state = 83
                self.expression(0)
                self.state = 84
                self.match(VSAParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.MINUS:
                    self.state = 86
                    self.match(VSAParser.MINUS)
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(VSAParser.T__0)
                self.state = 93
                self.expression(0)
                self.state = 94
                self.match(VSAParser.T__1)
                pass

            elif la_ == 3:
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.MINUS:
                    self.state = 96
                    self.match(VSAParser.MINUS)
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 102
                self.atom()
                pass

            elif la_ == 4:
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.NEG:
                    self.state = 103
                    self.match(VSAParser.NEG)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.atom()
                pass

            elif la_ == 5:
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VSAParser.NEG:
                    self.state = 110
                    self.match(VSAParser.NEG)
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 116
                self.match(VSAParser.T__0)
                self.state = 117
                self.expression(0)
                self.state = 118
                self.match(VSAParser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = VSAParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 122
                    if not self.precpred(self._ctx, 6):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                    self.state = 123
                    self.binop()
                    self.state = 124
                    self.expression(7) 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(VSAParser.ScientificContext,0)


        def variable(self):
            return self.getTypedRuleContext(VSAParser.VariableContext,0)


        def getRuleIndex(self):
            return VSAParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = VSAParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atom)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VSAParser.SCIENTIFIC_NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.scientific()
                pass
            elif token in [VSAParser.VARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScientificContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCIENTIFIC_NUMBER(self):
            return self.getToken(VSAParser.SCIENTIFIC_NUMBER, 0)

        def getRuleIndex(self):
            return VSAParser.RULE_scientific

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScientific" ):
                listener.enterScientific(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScientific" ):
                listener.exitScientific(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScientific" ):
                return visitor.visitScientific(self)
            else:
                return visitor.visitChildren(self)




    def scientific(self):

        localctx = VSAParser.ScientificContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_scientific)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(VSAParser.SCIENTIFIC_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(VSAParser.VARIABLE, 0)

        def getRuleIndex(self):
            return VSAParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = VSAParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(VSAParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(VSAParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(VSAParser.MINUS, 0)

        def TIMES(self):
            return self.getToken(VSAParser.TIMES, 0)

        def DIV(self):
            return self.getToken(VSAParser.DIV, 0)

        def LS(self):
            return self.getToken(VSAParser.LS, 0)

        def RS(self):
            return self.getToken(VSAParser.RS, 0)

        def OR(self):
            return self.getToken(VSAParser.OR, 0)

        def AND(self):
            return self.getToken(VSAParser.AND, 0)

        def XOR(self):
            return self.getToken(VSAParser.XOR, 0)

        def REM(self):
            return self.getToken(VSAParser.REM, 0)

        def CON(self):
            return self.getToken(VSAParser.CON, 0)

        def getRuleIndex(self):
            return VSAParser.RULE_binop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinop" ):
                listener.enterBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinop" ):
                listener.exitBinop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinop" ):
                return visitor.visitBinop(self)
            else:
                return visitor.visitChildren(self)




    def binop(self):

        localctx = VSAParser.BinopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_binop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VSAParser.PLUS) | (1 << VSAParser.MINUS) | (1 << VSAParser.TIMES) | (1 << VSAParser.DIV) | (1 << VSAParser.LS) | (1 << VSAParser.RS) | (1 << VSAParser.OR) | (1 << VSAParser.AND) | (1 << VSAParser.XOR) | (1 << VSAParser.CON) | (1 << VSAParser.REM))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.expr__sempred
        self._predicates[2] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr__sempred(self, localctx:Expr_Context, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         




